--- a/kubernetes/echo-server/deployment.yaml
+++ b/kubernetes/echo-server/deployment.yaml
@@ -17,3 +17,18 @@ spec:
         image: k8s.gcr.io/echoserver:1.4
         ports:
         - containerPort: 8080
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: echo-server
+spec:
+  selector:
+    app: echo-server
+  ports:
+    - protocol: TCP
+      port: 30000
+      targetPort: 8080
+  type: LoadBalancer
